--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
         <title> Etch-A-Sketch </title>
         <link rel="stylesheet" href="style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <script src ="script.js"></script>
+        <script src ="script.js" defer></script>
     </head>
     <body>
         <div class="container">
-            
         </div>
+        <div class="button-holder">
+            <button id="btn">ChangeSize</button>
+            <button id="btn-clear">Clear</button>
+          </div>
 
 
     </body>
